--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -1,11 +1,6 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Gallery</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block content %}
 
     <ul>
         {% for album in album_list %}
@@ -16,5 +11,4 @@
         {% endfor %}
     </ul>
 
-</body>
-</html>
+{% endblock %}
