--- a/templates/index.html
+++ b/templates/index.html
@@ -1,16 +1,49 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    
+{% extends 'base.html' %}
+
+{% block content %}
+    <style>
+    /* Make the image fully responsive */
+    .carousel-inner img {
+    width: 100%;
+    height: 100%;
+    }
+    </style>
+    <h1>KARUZELA</h1>
+    <hr>
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            {% for artwork in artworks|slice:"1:" %}
+                <li data-target="#myCarousel" data-slide-to="{{ forloop.counter }}"></li>
+            {% endfor %}
+        </ol>
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="{{ artworks.first.image.url }}">
+            </div>
+            
+            {% for artwork in artworks|slice:"1:" %}
+                <div class="carousel-item">
+                    <img src="{{ artwork.image.url }}">
+                </div>
+            {% endfor %}
+        </div>
+
+        <!-- Left and right controls -->
+        <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+        </a>
+        <a class="carousel-control-next" href="#myCarousel" data-slide="next">
+            <span class="carousel-control-next-icon"></span>
+        </a>
+    </div>
+    <hr>
+
     {% for artwork in artworks %}
         <img src="{{ artwork.image.url }}">
         <a href="{{ artwork.image.name }}">{{ artwork.image.url }}</a>
     {% endfor %}
-    
 
-</body>
-</html>
+{% endblock %}
