--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
 
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-black navbar-expand-lg navbar-dark">
     <a class="navbar-brand" href="{% url 'index' %}">Kinkostfur</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,17 +22,33 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'index' %}">Strona główna</a>
+            <li class="nav-item dropdown">
+                <a class="nav-link" href="{% url 'gallery' %}">
+                    <img src="{% static 'default_images/default_icon.png' %}">
+                </a>
+                <div class="dropdown-m dropdown-profile">
+                    bong
+                    <img class="navbar-tile" src="{% static STATIC_URL %}/default_images/test_navbar_tile.png">
+                </div>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link" href="{% url 'gallery' %}">
                     <img src="{% static 'default_images/default_icon.png' %}">
                 </a>
-                <div class="dropdown-m">
+                <div class="dropdown-m dropdown-gallery">
                     {% for album in albums %}
                         <a class="dropdown-item" href="{% url 'album' title_slug=album.slug %}">{{ album.title }}</a>
                     {% endfor %}
+                    <img class="navbar-tile" src="{% static STATIC_URL %}/default_images/test_navbar_tile.png">
+                </div>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link" href="{% url 'gallery' %}">
+                    <img src="{% static 'default_images/default_icon.png' %}">
+                </a>
+                <div class="dropdown-m dropdown-contact">
+                    bong
+                    <img class="navbar-tile" src="{% static STATIC_URL %}/default_images/test_navbar_tile.png">
                 </div>
             </li>
         </ul>
