--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,9 @@
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
         <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#carousel" data-slide-to="0" class="active"></li>
             {% for artwork in artworks|slice:"1:" %}
-                <li data-target="#myCarousel" data-slide-to="{{ forloop.counter }}"></li>
+                <li data-target="#carousel" data-slide-to="{{ forloop.counter }}"></li>
             {% endfor %}
         </ol>
         <!-- Wrapper for slides -->
