--- a/templates/base.html
+++ b/templates/base.html
@@ -61,5 +61,5 @@
 
 </body>
 
-{#    <script src="{% static 'js/scripts.js' %}"></script>#}
+<script src="{% static 'js/scripts.js' %}"></script>
 </html>
