--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
                 </a>
                 <div class="dropdown-m dropdown-profile">
                     bong
-                    <img class="navbar-dropdown-tile" src="{% static STATIC_URL %}/default_images/test_navbar_tile.png">
+                    <div class="navbar-tile navbar-dropdown-tile"></div>
                 </div>
             </li>
             <li class="nav-item dropdown">
@@ -39,7 +39,7 @@
                     {% for album in albums %}
                         <a class="dropdown-item" href="{% url 'album' title_slug=album.slug %}">{{ album.title }}</a>
                     {% endfor %}
-                    <img class="navbar-dropdown-tile" src="{% static STATIC_URL %}/default_images/test_navbar_tile.png">
+                    <div class="navbar-tile navbar-dropdown-tile"></div>
                 </div>
             </li>
             <li class="nav-item dropdown">
@@ -48,7 +48,7 @@
                 </a>
                 <div class="dropdown-m dropdown-contact">
                     bong
-                    <img class="navbar-dropdown-tile" src="{% static STATIC_URL %}/default_images/test_navbar_tile.png">
+                    <div class="navbar-tile navbar-dropdown-tile"></div>
                 </div>
             </li>
         </ul>
