--- a/portfolio/static/css/style.css
+++ b/portfolio/static/css/style.css
@@ -88,9 +88,26 @@
 }
 
 .flex-item {
-    margin: 1vw;
+    padding: 2vw;
 }
 
 #gallery {
     width: 100%;
+}
+
+.gallery-album-container {
+    max-width: 25em;
+    min-width: 33%;
+    max-height: 25em;
+    min-height: 33%;
+    /*border-style: solid;*/
+    /*border-color: #0c63e4;*/
+}
+
+.gallery-cover-image {
+    width: 100%;
+    height: auto;
+    max-width: 100%;
+    /*min-width: 10em;*/
+    object-fit: contain;
 }
