gallery view layout and image display

--- a/templates/base.html
+++ b/templates/base.html
@@ -54,10 +54,15 @@
         </ul>
     </div>
 </nav>
+
 <div class="navbar-tile"></div>
 
-{% block content %}
-{% endblock %}
+<div id="content">
+
+    {% block content %}
+    {% endblock %}
+
+</div>
 
 </body>
 
