--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -2,16 +2,28 @@
 
 {% block content %}
 
-    <div class="flex-container flex-wrap justify-content-around align-items-center" id="gallery">
+{#    <div class="flex-container flex-wrap justify-content-around align-items-center" id="gallery">#}
+{#        {% for album in album_list %}#}
+{#            <div class="flex-item gallery-album-container flex-container flex-column align-items-center justify-content-center">#}
+{#                <div class="gallery-cover-image" style="border-style: dashed; border-color: #0f5132;">#}
+{#                    <img class="gallery-cover-image" src="{{ album.get_cover_url }}"#}
+{#                             style="#}
+{#                                     width: calc(30% + 100 * {{ album.get_artworks_count_ratio }}%);#}
+{#                                     height: 100%;#}
+{#                             "#}
+{#                    >#}
+{#                    <h3 class="overlay">{{ album.title }}</h3>#}
+{#                </div>#}
+{#            </div>#}
+{#        {% endfor %}#}
+{#    </div>#}
+    <div class="flex-container flex-wrap justify-content-center" id="gallery">
         {% for album in album_list %}
-            <div class="flex-item gallery-album-container flex-container flex-column align-items-center justify-content-center">
-                    <img class="gallery-cover-image" src="{{ album.get_cover_url }}"
-                         style="
-                                 width: calc(30% + 100 * {{ album.get_artworks_count_ratio }}%);
-                                 height: 100%;
-                         "
-                    >
-                    <h2>{{ album.title }}</h2>
+            <div class="card gallery-card">
+                <img class="card-img gallery-cover-image img-fluid" src="{{ album.get_cover_url }}">
+                <div class="card-img-overlay gallery-overlay">
+                    <h1>{{ album.title }}</h1>
+                </div>
             </div>
         {% endfor %}
     </div>
