--- a/portfolio/static/css/style.css
+++ b/portfolio/static/css/style.css
@@ -46,7 +46,7 @@
     width: 100%;
     background-image: url("/static/default_images/test_navbar_tile.png");
     background-repeat: repeat-x;
-    padding: 1vw;
+    padding-bottom: 3rem;
 }
 
 .navbar-dropdown-tile {
@@ -87,27 +87,42 @@
     display: flex;
 }
 
-.flex-item {
-    padding: 2vw;
+#content {
+    margin-top: 3em;
 }
 
-#gallery {
-    width: 100%;
-}
+.gallery-card {
+    width: 26%;
+    height: 14vw;
+    min-width: 16em;
+    max-width: 33%;
+    min-height: 9rem;
+    max-height: 19%;
 
-.gallery-album-container {
-    max-width: 25em;
-    min-width: 33%;
-    max-height: 25em;
-    min-height: 33%;
-    /*border-style: solid;*/
-    /*border-color: #0c63e4;*/
+    margin: 1rem;
+    border-style: none;
+    border-radius: 0;
 }
 
 .gallery-cover-image {
-    width: 100%;
-    height: auto;
+    object-fit: cover;
+    min-width: 100%;
     max-width: 100%;
-    /*min-width: 10em;*/
-    object-fit: contain;
+    min-height: 100%;
+    max-height: 100%;
+    border-style: none;
+    border-radius: 0;
+}
+
+.gallery-overlay {
+    background: rgb(0, 0, 0);
+    background: rgba(0, 0, 0, 0.2);
+    transition: .5s ease;
+    opacity: 0;
+    color: black;
+    text-align: center;
+}
+
+.card:hover .gallery-overlay {
+  opacity: 1;
 }
